move player and trategy to gamelogic/, create Table for context and add CircularIterator for going around it, some minor textUi tweaks, and the start of a stats class